# geo-optimizer

./: .dockerignore  .env.example  .env.local-distributed  .env.redis  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.observability.yml  docker-compose.otel.yml  docker-compose.redis.yml  docker-compose.yml  pyproject.toml
.claude/commands/: proj-inttest.md  proj-refresh-docs.md  proj-setup.md
.playwright-mcp/: llms.txt
docs/: architecture.md  design_decisions.md  integration-test-plan.md  project_requirements.md
guides/: api.md  deployment.md  environment.md  llms-txt-generation.md  pipeline.md
infra/: otel-collector-config.yaml
prd/: 002-strategy-orchestration-and-crawl-engine.md
prd/prd-001-observability-stack/: prd.md
prd/prd-001-product-vision/: feature-ideation-crawling-strategies.md  prd.md
prd/prd-003-web-ui-api/: prd.md
prd/prd-004-persistence-delivery/: prd.md
prd/prd-005-streamlit-ui-enhancement/: prd.md
prd/prd-006-core-module-error-handling-and-observability-events/: prd.md
prd/prd-006-railway-production-deployment/: prd.md
prd/prd-007-fallback-link-following-crawler/: prd.md
prd/prd001/: feature-ideation-crawling-strategies.md
railway/api/: railway.toml
railway/ui/: railway.toml
railway/worker/: railway.toml
resources/: inttest-sites.json
scripts/: check-crawl-status.py  submit-inttest.py  submit-inttest.sh
src/crawllmer/: celery_app.py  config.py  main.py  worker.py
tests/: conftest.py  test_example.py
tests/integration/: test_api.py  test_pipeline_flow.py
(+92 files in other folders)
