[project]
name = "crawllmer"
version = "0.1.0"
description = "Web app that discovers or generates llms.txt for websites"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "celery>=5.4.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.25",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "beautifulsoup4>=4.12.3",
    "celery>=5.4.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
